Initial style and template developed

--- a/index.html
+++ b/index.html
@@ -1,1 +1,25 @@
-<h1> Under Construction...</h1>
+<!DOCTYPE html>
+<html dir="ltr">
+  <head>
+    <link rel="stylesheet" href="css/global.css">
+    <link rel="stylesheet" href="css/normalize.css">
+
+    <title>Home</title>
+    <link rel="icon" type="image/x-icon" href="resources/Logo4.png">
+
+    <nav class="home-nav">
+      <img class="nav" src="resources/Logo4.png" alt="Sepehr">
+      <button class="selected" href="home.html" title="Home">Home</button>
+      <button class="nav" href="Research.html" title="Research">Research</button>
+      <button class="nav" href="Contact.html" title="Contact">Contact</button>
+    </nav>
+
+  </head>
+
+  <body>
+    <footer>
+      <p>Personal Webpage</p>
+    </footer>
+  </body>
+
+</html>
