--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html dir="ltr">
   <head>
     <link rel="stylesheet" href="css/global.css">
@@ -27,4 +27,97 @@
     </footer>
   </body>
 
+</html> -->
+
+<!DOCTYPE html>
+<html lang="en">
+<meta name="viewport" content="width-device-width,initial-scale1.0" charset="UTF-8">
+<head>
+    <style>
+
+        body {
+            margin-top: 0;
+            background: linear-gradient(to bottom,#bdbdca,#7d838d);
+            min-width: 600px;
+            font-family: Arial, Helvetica, sans-serif;
+            /* min-height: 100vh; margin:0;
+            display: grid;
+            grid-template-rows: auto 1fr auto; */
+        }      
+    </style>
+    <link rel="icon" type="image/x-icon" href="static/basic/img/logo3-i.ico">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+</head>
+<div style="min-height: 90vh">
+<body>
+    <nav class="navbar navbar-expand-sm bg-dark navbar-dark" style="padding-top: 15px; padding-bottom: 15px;">
+        <div class="container-fluid">
+            <ul class="navbar-nav">
+              <li>
+                <img width="40" src="{% static 'basic/img/logo3.png' %}">
+              </li>
+              <li>
+                <img class="rounded-pill" width="90" src="{% static 'basic/img/logo.png' %}" style="border-right: 1px #909090 solid; margin-right: 20px;">
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'home:homepage' %}" style="border-right: 1px #909090 solid;">Home</a>
+              </li>
+             <li class="nav-item">
+                <a class="nav-link" href="{% url 'home:about' %}" style="border-right: 1px #909090 solid;">About us</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'home:contact' %}" style="border-right: 1px #909090 solid;">Contact</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'items:trade_list' %}" >Items</a>
+              </li>
+            </ul>  
+            <div class="btn-group">
+                {% if request.user.is_authenticated %}
+                <a href="{% url 'users:profile' %}">
+                    <button class="btn btn-secondary" style="margin-right: 5px;">Profile</button>
+                </a>
+                <a href="{% url 'users:logout' %}">
+                    <button class="btn btn-danger" style="margin-right: 5px;">Logout</button>
+                </a>
+                <!-- <img class="rounded-circle" height="60px" src="{{ user_data.profile_image }}" alt="Profile Image" loading="lazy" style="margin-right: 0px;"> -->
+                {% else %}
+                <a href="{% url 'users:login' %}">
+                    <button class="btn btn-light" style="margin-right: 5px;">Sign In</button>
+                </a>
+                <a href="{% url 'users:signup' %}">
+                    <button class="btn btn-outline-light">Sign Up</button>
+                </a>
+                {% endif %}
+            </div>
+            
+          </div>
+    </nav>
+</body>
+</div>
+
+<div>
+<footer class="bg-dark text-center text-white">
+    <div class="container p-4 pb-0">
+        <section class="">
+            {% if request.user.is_authenticated %}
+            {% else %}
+            <p class="d-flex justify-content-center align-items-center">
+              <span class="me-3">Register for free</span>
+              <a href="{% url 'users:signup' %}">
+                <button class="btn btn-outline-light btn-rounded">Sign up</button>
+              </a>
+            </p>
+            {% endif %}
+          </section>
+    </div>
+  
+    <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+      © 2023 Copyright: UniMarket.com
+    </div>
+  </footer>
+</div>
+
+</body>
 </html>
