--- a/index.html
+++ b/index.html
@@ -40,12 +40,10 @@
             background: linear-gradient(to bottom,#bdbdca,#7d838d);
             min-width: 600px;
             font-family: Arial, Helvetica, sans-serif;
-            /* min-height: 100vh; margin:0;
-            display: grid;
-            grid-template-rows: auto 1fr auto; */
         }      
     </style>
-    <link rel="icon" type="image/x-icon" href="static/basic/img/logo3-i.ico">
+    <title>Sepehr Liasi</title>
+    <link rel="icon" type="image/x-icon" href="resources/Logo4.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
@@ -55,7 +53,7 @@
         <div class="container-fluid">
             <ul class="navbar-nav">
               <li>
-                <img width="40" src="{% static 'basic/img/logo3.png' %}">
+                <img width="40" src="resources/Logo4.png">
               </li>
               <li>
                 <img class="rounded-pill" width="90" src="{% static 'basic/img/logo.png' %}" style="border-right: 1px #909090 solid; margin-right: 20px;">
@@ -72,26 +70,7 @@
               <li class="nav-item">
                 <a class="nav-link" href="{% url 'items:trade_list' %}" >Items</a>
               </li>
-            </ul>  
-            <div class="btn-group">
-                {% if request.user.is_authenticated %}
-                <a href="{% url 'users:profile' %}">
-                    <button class="btn btn-secondary" style="margin-right: 5px;">Profile</button>
-                </a>
-                <a href="{% url 'users:logout' %}">
-                    <button class="btn btn-danger" style="margin-right: 5px;">Logout</button>
-                </a>
-                <!-- <img class="rounded-circle" height="60px" src="{{ user_data.profile_image }}" alt="Profile Image" loading="lazy" style="margin-right: 0px;"> -->
-                {% else %}
-                <a href="{% url 'users:login' %}">
-                    <button class="btn btn-light" style="margin-right: 5px;">Sign In</button>
-                </a>
-                <a href="{% url 'users:signup' %}">
-                    <button class="btn btn-outline-light">Sign Up</button>
-                </a>
-                {% endif %}
-            </div>
-            
+            </ul>
           </div>
     </nav>
 </body>
@@ -99,22 +78,8 @@
 
 <div>
 <footer class="bg-dark text-center text-white">
-    <div class="container p-4 pb-0">
-        <section class="">
-            {% if request.user.is_authenticated %}
-            {% else %}
-            <p class="d-flex justify-content-center align-items-center">
-              <span class="me-3">Register for free</span>
-              <a href="{% url 'users:signup' %}">
-                <button class="btn btn-outline-light btn-rounded">Sign up</button>
-              </a>
-            </p>
-            {% endif %}
-          </section>
-    </div>
-  
     <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-      © 2023 Copyright: UniMarket.com
+      Personal Page
     </div>
   </footer>
 </div>
