--- a/index.html
+++ b/index.html
@@ -36,43 +36,48 @@
     <style>
 
         body {
-            margin-top: 0;
-            background: linear-gradient(to bottom,#bdbdca,#7d838d);
-            min-width: 600px;
-            font-family: Arial, Helvetica, sans-serif;
-        }      
+          margin-top: 0px;
+          background-image: url('resources/bg-blur.jpg');
+          background-repeat: no-repeat;
+          background-attachment: fixed;
+          background-size: cover;
+        }   
     </style>
     <title>Sepehr Liasi</title>
     <link rel="icon" type="image/x-icon" href="resources/Logo4.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
-<div style="min-height: 90vh">
+<div style="min-height: 100vh">
 <body>
     <nav class="navbar navbar-expand-sm bg-dark navbar-dark" style="padding-top: 15px; padding-bottom: 15px;">
         <div class="container-fluid">
             <ul class="navbar-nav">
               <li>
-                <img width="40" src="resources/Logo4.png">
-              </li>
-              <li>
-                <img class="rounded-pill" width="90" src="{% static 'basic/img/logo.png' %}" style="border-right: 1px #909090 solid; margin-right: 20px;">
+                <img width="65" class="rounded-pill" src="resources/Logo4.png" style="border-right: 1px #909090 solid; margin-right: 20px;">
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{% url 'home:homepage' %}" style="border-right: 1px #909090 solid;">Home</a>
-              </li>
-             <li class="nav-item">
-                <a class="nav-link" href="{% url 'home:about' %}" style="border-right: 1px #909090 solid;">About us</a>
+                <a class="nav-link" href="index.html" style="border-right: 1px #909090 solid;">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{% url 'home:contact' %}" style="border-right: 1px #909090 solid;">Contact</a>
+                <a class="nav-link" href="projects.html" style="border-right: 1px #909090 solid;">Projects</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{% url 'items:trade_list' %}" >Items</a>
+                <a class="nav-link" href="work.html" style="border-right: 1px #909090 solid;">Work Experience</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="contact.html" style="border-right: 1px #909090 solid;">Contact</a>
               </li>
             </ul>
           </div>
     </nav>
+    <div class="container-lg p-5 my-3 text-white" style="border-radius: 5px; background-color:brown;">
+      <h4>📌About me</h4>
+        <hr>
+        <p>My name is <b>Sepehr Ghaseminejad Liasi</b> and I am a senior <b>Computer Engineering</b> student at <a href="https://en.kntu.ac.ir/">K.N.Toosi University of Technology</a>
+            <br>
+            On this webpage you can find a brief explanation about me and my interests. There is also some information about my work and university experiences, which you can find them on <a href="projects.html">Projects</a> and <a href="work.html">Work Experience</a> pages. Moreover, there are links for connection in <a href="contact.html">Contact</a> page.</p>
+    </div>
 </body>
 </div>
 
