website completely initiated

--- a/contact.html
+++ b/contact.html
@@ -1,39 +1,8 @@
-<!-- <!DOCTYPE html>
-<html dir="ltr">
-  <head>
-    <link rel="stylesheet" href="css/global.css">
-    <link rel="stylesheet" href="css/normalize.css">
-
-    <title>Home</title>
-    <link rel="icon" type="image/x-icon" href="resources/Logo4.png">
-
-    <nav class="home-nav">
-      <img class="nav" src="resources/Logo4.png" alt="Sepehr">
-      <button class="selected" href="home.html" title="Home">Home</button>
-      <button class="nav" href="Research.html" title="Research">Research</button>
-      <button class="nav" href="Contact.html" title="Contact">Contact</button>
-    </nav>
-
-  </head>
-
-  <body>
-
-    <h1>
-        Under Construction ;)
-    </h1>
-
-    <footer>
-      <p>Personal Webpage</p>
-    </footer>
-  </body>
-
-</html> -->
-
 <!DOCTYPE html>
 <html lang="en">
 <meta name="viewport" content="width-device-width,initial-scale1.0" charset="UTF-8">
 <head>
-    <title>Sepehr Liasi</title>
+    <title>Contact|Sepehr Liasi</title>
     
     <link rel="stylesheet" href="css/global.css">
     <link rel="stylesheet" href="css/normalize.css">
@@ -65,11 +34,8 @@
           </div>
     </nav>
     <div class="container-lg p-5 my-3 text-white" style="border-radius: 5px; background-color:brown;">
-      <h4>📌About me</h4>
-        <hr>
-        <p>My name is <b>Sepehr Ghaseminejad Liasi</b> and I am a senior <b>Computer Engineering</b> student at <a href="https://en.kntu.ac.ir/">K.N.Toosi University of Technology</a>
-            <br>
-            On this webpage you can find a brief explanation about me and my interests. There is also some information about my work and university experiences, which you can find them on <a href="projects.html">Projects</a> and <a href="work.html">Work Experience</a> pages. Moreover, there are links for connection in <a href="contact.html">Contact</a> page.</p>
+      <h4>📌Sorry, this page is under construction!</h4>
+      <hr>
     </div>
 </body>
 </div>
