minor UI improvements

--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
                 <a class="nav-link" href="work.html" style="border-right: 1px #909090 solid;">Work Experience</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="contact.html" style="border-right: 1px #909090 solid;">Contact</a>
+                <a class="nav-link" href="contact.html" style="border-right: 1px #909090 solid;"><h5>Contact</h5></a>
               </li>
             </ul>
           </div>
