--- a/projects.html
+++ b/projects.html
@@ -22,7 +22,7 @@
                 <a class="nav-link" href="index.html" style="border-right: 1px #909090 solid;">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="projects.html" style="border-right: 1px #909090 solid;">Projects</a>
+                <a class="nav-link" href="projects.html" style="border-right: 1px #909090 solid;"><h5>Projects</h5></a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="work.html" style="border-right: 1px #909090 solid;">Work Experience</a>
