--- a/work.html
+++ b/work.html
@@ -25,7 +25,7 @@
                 <a class="nav-link" href="projects.html" style="border-right: 1px #909090 solid;">Projects</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="work.html" style="border-right: 1px #909090 solid;">Work Experience</a>
+                <a class="nav-link" href="work.html" style="border-right: 1px #909090 solid;"><h5>Work Experience</h5></a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="contact.html" style="border-right: 1px #909090 solid;">Contact</a>
