--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <meta name="viewport" content="width-device-width,initial-scale1.0" charset="UTF-8">
 <head>
     <title>Sepehr Liasi</title>
-    
+
     <link rel="stylesheet" href="css/global.css">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="icon" type="image/x-icon" href="resources/Logo4.png">
@@ -50,7 +50,7 @@
                 <img width="65" class="rounded-pill" src="resources/Logo4.png" style="border-right: 1px #909090 solid; margin-right: 20px;">
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="index.html" style="border-right: 1px #909090 solid;">Home</a>
+                <a class="nav-link" href="index.html" style="border-right: 1px #909090 solid;"><h5>Home</h5></a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="projects.html" style="border-right: 1px #909090 solid;">Projects</a>
@@ -64,7 +64,7 @@
             </ul>
           </div>
     </nav>
-    <div class="container-lg p-5 my-3 text-white" style="border-radius: 5px; background-color:brown;">
+    <div class="container-lg p-5 my-3 text-white" style="border-radius: 5px; background-color:rgb(42, 165, 50);">
       <h4>📌About me</h4>
         <hr>
         <p>My name is <b>Sepehr Ghaseminejad Liasi</b> and I am a senior <b>Computer Engineering</b> student at <a href="https://en.kntu.ac.ir/">K.N.Toosi University of Technology</a>
