--- a/contact.html
+++ b/contact.html
@@ -2,12 +2,13 @@
 <html lang="en">
 <meta name="viewport" content="width-device-width,initial-scale1.0" charset="UTF-8">
 <head>
-    <title>Contact|Sepehr Liasi</title>
+    <title>Contact | Sepehr Liasi</title>
     
     <link rel="stylesheet" href="css/global.css">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="icon" type="image/x-icon" href="resources/Logo4.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <div style="min-height: 100vh">
@@ -36,6 +37,9 @@
     <div class="container-lg p-5 my-3 text-white" style="border-radius: 5px; background-color:brown;">
       <h4>📌Sorry, this page is under construction!</h4>
       <hr>
+      <i class="fa fa-linkedin-square" style="font-size: 20px;"><a href="https://www.linkedin.com/in/sepehr-ghaseminejad-727a26201/" style="color: chartreuse; text-decoration: none;" target="_blank"> Linkedin Profile</a></i>
+      <hr>
+      <i class="fa fa-telegram" style="font-size: 20px; color:dodgerblue"><a href="https://t.me/Sepehr404_bot" style="color: chartreuse; text-decoration: none;" target="_blank"> Telegram Profile Bot</a></i>
     </div>
 </body>
 </div>
