--- a/index.html
+++ b/index.html
@@ -1,34 +1,3 @@
-<!-- <!DOCTYPE html>
-<html dir="ltr">
-  <head>
-    <link rel="stylesheet" href="css/global.css">
-    <link rel="stylesheet" href="css/normalize.css">
-
-    <title>Home</title>
-    <link rel="icon" type="image/x-icon" href="resources/Logo4.png">
-
-    <nav class="home-nav">
-      <img class="nav" src="resources/Logo4.png" alt="Sepehr">
-      <button class="selected" href="home.html" title="Home">Home</button>
-      <button class="nav" href="Research.html" title="Research">Research</button>
-      <button class="nav" href="Contact.html" title="Contact">Contact</button>
-    </nav>
-
-  </head>
-
-  <body>
-
-    <h1>
-        Under Construction ;)
-    </h1>
-
-    <footer>
-      <p>Personal Webpage</p>
-    </footer>
-  </body>
-
-</html> -->
-
 <!DOCTYPE html>
 <html lang="en">
 <meta name="viewport" content="width-device-width,initial-scale1.0" charset="UTF-8">
@@ -39,6 +8,7 @@
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="icon" type="image/x-icon" href="resources/Logo4.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <div style="min-height: 100vh">
@@ -64,12 +34,37 @@
             </ul>
           </div>
     </nav>
-    <div class="container-lg p-5 my-3 text-white" style="border-radius: 5px; background-color:rgb(42, 165, 50);">
-      <h4>📌About me</h4>
+    <div class="container-lg p-5 my-3 text-white" style="border-radius: 5px; background-color:rgb(12, 108, 20);">
+      <h4>📌Biography</h4>
         <hr>
-        <p>My name is <b>Sepehr Ghaseminejad Liasi</b> and I am a senior <b>Computer Engineering</b> student at <a href="https://en.kntu.ac.ir/">K.N.Toosi University of Technology</a>
+        <p>My name is <b>Sepehr Ghaseminejad Liasi</b> and I am a senior <b>Computer Engineering</b> student at <a href="https://en.kntu.ac.ir/" style="color:rgb(127, 228, 195)">K.N.Toosi University of Technology</a>.
+            It may worth mentoning that I have participated in Mathematics and Informatics Olympiads in which I got to be admitted in first and second phases and be among the top 100 students.
             <br>
-            On this webpage you can find a brief explanation about me and my interests. There is also some information about my work and university experiences, which you can find them on <a href="projects.html">Projects</a> and <a href="work.html">Work Experience</a> pages. Moreover, there are links for connection in <a href="contact.html">Contact</a> page.</p>
+            I competed in ACM programming competition with my other two teammates. We finally placed 41th in national competition after being qualified for it and being one of the 4 represantative teams of K.N.Toosi University of Technology.
+            <br>
+            On this webpage you can find a brief explanation about me and my interests. There is also some information about my work and university experiences, which you can find them on
+             <a href="projects.html" style="color:rgb(127, 228, 195)">Projects</a> and <a href="work.html" style="color:rgb(127, 228, 195)">Work Experience</a>
+              pages. Moreover, there are links for connection in <a href="contact.html" style="color:rgb(127, 228, 195)">Contact</a> page.</p>
+    </div>
+    <div class="container-lg p-5 my-3 text-white" style="border-radius: 5px; background-color:rgb(12, 108, 20);">
+      <h4>📚Research Interests</h4>
+        <hr>
+        <p>My research interests include a wide area in Computer Science, particularly <b>Artificial Intelligence</b>, <b>Machine Learning</b>, <b>Computer Vision</b>, <b>Data Analysis</b> and <b>Game Theory</b>.
+          Since I have studied for Mathematics Olympiad, I'm strongly interested in geometry, combinatory and their applications on different areas of Computer Science, including AI and <b>Networks</b>.
+            <br>
+            
+    </div>
+    <hr>
+    <div class="container-lg p-5 my-3 text-white" style="border-radius: 5px; background-color:rgb(12, 108, 20);">
+      <h4>📝Test Scores</h4>
+        <hr>
+        <h6>TOEFL</h6>
+        <p>Total Score: 103</p>
+        <hr>
+        <h6>GRE</h6>
+        <p>Quantitative Score: 170 <br>Verbal Score: 147 <br> Total Score: 317</p>
+        <hr>
+        <h7 style="color: rgb(237, 100, 100);">More detail on the scores is available in my CV</h7>
     </div>
 </body>
 </div>
@@ -77,7 +72,7 @@
 <div>
 <footer class="bg-dark text-center text-white">
     <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-      Personal Page
+      Sepehr Liasi's Personal Page
     </div>
   </footer>
 </div>
