--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <h4>📌Biography</h4>
         <hr>
         <p>My name is <b>Sepehr Ghaseminejad Liasi</b> and I am a senior <b>Computer Engineering</b> student at <a href="https://en.kntu.ac.ir/" style="color:rgb(127, 228, 195)">K.N.Toosi University of Technology</a>.
-            It may worth mentoning that I have participated in Mathematics and Informatics Olympiads in which I got to be admitted in first and second phases and be among the top 100 students.
+            It may worth mentioning that I have participated in Mathematics and Informatics Olympiads in which I got to be admitted in first and second phases and be among the top 100 students.
             <br>
             I competed in ACM programming competition with my other two teammates. We finally placed 41th in national competition after being qualified for it and being one of the 4 represantative teams of K.N.Toosi University of Technology.
             <br>
