--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <div class="container-lg p-5 my-3 text-white" style="border-radius: 5px; background-color:rgb(12, 108, 20);">
       <h4>📚Research Interests</h4>
         <hr>
-        <p>My research interests include a wide area in Computer Science, particularly <b>Artificial Intelligence</b>, <b>Machine Learning</b>, <b>Computer Vision</b>, <b>Data Analysis</b> and <b>Game Theory</b>.
+        <p>My research interests include a wide area in Computer Science, particularly <b>Artificial Intelligence</b>, <b>Machine Learning</b>, <b>Computer Vision</b>, <b>Data Analysis</b>, <b>Natural Language Processing</b>, and <b>Game Theory</b>.
           Since I have studied for Mathematics Olympiad, I'm strongly interested in geometry, combinatory and their applications on different areas of Computer Science, including AI and <b>Networks</b>.
             <br>
             
