Crypto Predict project and Javafx game added

--- a/projects.html
+++ b/projects.html
@@ -33,10 +33,30 @@
             </ul>
           </div>
     </nav>
-    <div class="container-lg p-5 my-3 text-white" style="border-radius: 5px; background-color:brown;">
-        <h4>📌Sorry, this page is under construction!</h4>
+    <div class="container-lg p-5 my-3 text-white" style="border-radius: 5px; background-color:rgb(24, 61, 27);">
+      <h4>💰Automated trading in cryptocurrency market based on predictions using Deep Learning</h4>
         <hr>
-      </div>
+        <p>The main goal of this project is to investigate the existence of methods for predicting cryptocurrency prices and then simulating 
+          an automatic trading strategy based on that prediction; So that it can be used to make a profit in the digital currency markets. 
+          This attempt can not only be an important step in the field of automatic trading of cryptocurrencies, but also
+          it can help financial analysts to better evaluate and increase their confidence about the future of this market.
+          In this project, an attempt has been made to first design a model that has the ability to predict in a suitable 
+          period of time with acceptable accuracy. We used LSTM model for this purpose. In the second stage, an attempt has been made to design a strategy for 
+          automatic trading using the built model in such a way that these transactions will eventually lead to profit.
+        </p>
+        <p>In the pictures below, there is the result of predictions of Bitcoin using LSTM model and financial Indicators. This is a consecutive prediction.
+        </p>
+        <img src="resources/Bitcoin.png" alt="">
+        <p>Here is the accuracy and obtained signals for the autotrading process:</p>
+        <img src="resources/Trade.png" alt="">
+        <p>A paper is going to be published soon about these works with the appreciated help of Dr. Alaeiyan.</p>
+    </div>
+    <div class="container-lg p-5 my-3 text-white" style="border-radius: 5px; background-color:rgb(12, 108, 20);">
+      <h4>🎲Simple Game</h4>
+        <hr>
+        <p>This is a simple multi-player game created using <b>Java</b> and <b>JavaFX</b>. Each player can change his block type by using some defined keys
+           and there is a scoreboard to show the result. A preview can be seen below:</p>
+    </div>
 </body>
 </div>
 
