--- a/contact.html
+++ b/contact.html
@@ -47,7 +47,7 @@
 <div>
 <footer class="bg-dark text-center text-white">
     <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-      Personal Page
+      Sepehr Liasi's Personal Page
     </div>
   </footer>
 </div>
