--- a/index.html
+++ b/index.html
@@ -34,19 +34,23 @@
             </ul>
           </div>
     </nav>
-    <div class="container-lg p-5 my-3 text-white" style="border-radius: 5px; background-color:rgb(12, 108, 20);">
+    <div class="container-lg p-5 my-3 text-white" style="border-radius: 5px; background-color:rgb(45, 52, 46);">
       <h4>📌Biography</h4>
         <hr>
         <p>My name is <b>Sepehr Ghaseminejad Liasi</b> and I am a senior <b>Computer Engineering</b> student at <a href="https://en.kntu.ac.ir/" style="color:rgb(127, 228, 195)">K.N.Toosi University of Technology</a>.
             It may worth mentioning that I have participated in Mathematics and Informatics Olympiads in which I got to be admitted in first and second phases and be among the top 100 students.
             <br>
-            I competed in ACM programming competition with my other two teammates. We finally placed 41th in national competition after being qualified for it and being one of the 4 represantative teams of K.N.Toosi University of Technology.
+            I have competed in ICPC competition twice, once in 2020 and the other one in 2022. I could qualify for the regional contest with two of my teammates. Finally we placed 17th and 13th for the two reginal contests respectively.
+            <div>
+              <img src="resources/ICPC-Certificate2023.jpg" alt="" style="width: 30%;">
+              <img src="resources/ICPC2022.jpg" alt="" style="width: 30%;">
+            </div>
             <br>
             On this webpage you can find a brief explanation about me and my interests. There is also some information about my work and university experiences, which you can find them on
              <a href="projects.html" style="color:rgb(127, 228, 195)">Projects</a> and <a href="work.html" style="color:rgb(127, 228, 195)">Work Experience</a>
               pages. Moreover, there are links for connection in <a href="contact.html" style="color:rgb(127, 228, 195)">Contact</a> page.</p>
     </div>
-    <div class="container-lg p-5 my-3 text-white" style="border-radius: 5px; background-color:rgb(12, 108, 20);">
+    <div class="container-lg p-5 my-3 text-white" style="border-radius: 5px; background-color:rgb(45, 52, 46);">
       <h4>📚Research Interests</h4>
         <hr>
         <p>My research interests include a wide area in Computer Science, particularly <b>Artificial Intelligence</b>, <b>Machine Learning</b>, <b>Computer Vision</b>, <b>Data Analysis</b>, <b>Natural Language Processing</b>, and <b>Game Theory</b>.
@@ -55,7 +59,7 @@
             
     </div>
     <hr>
-    <div class="container-lg p-5 my-3 text-white" style="border-radius: 5px; background-color:rgb(12, 108, 20);">
+    <div class="container-lg p-5 my-3 text-white" style="border-radius: 5px; background-color:rgb(45, 52, 46);">
       <h4>📝Test Scores</h4>
         <hr>
         <h6>TOEFL</h6>
@@ -64,7 +68,7 @@
         <h6>GRE</h6>
         <p>Quantitative Score: 170 <br>Verbal Score: 147 <br> Total Score: 317</p>
         <hr>
-        <h7 style="color: rgb(237, 100, 100);">More detail on the scores is available in my CV</h7>
+        <h7 style="color: rgb(184, 60, 60);">More detail on the scores is available in my CV</h7>
     </div>
 </body>
 </div>
