--- a/contact.html
+++ b/contact.html
@@ -34,12 +34,14 @@
             </ul>
           </div>
     </nav>
-    <div class="container-lg p-5 my-3 text-white" style="border-radius: 5px; background-color:brown;">
-      <h4>📌Sorry, this page is under construction!</h4>
+    <div class="container-lg p-5 my-3 text-white" style="border-radius: 5px; background-color:rgb(45, 52, 46);">
+      <h4>📌You can contact me via:</h4>
       <hr>
       <i class="fa fa-linkedin-square" style="font-size: 20px;"><a href="https://www.linkedin.com/in/sepehr-ghaseminejad-727a26201/" style="color: chartreuse; text-decoration: none;" target="_blank"> Linkedin Profile</a></i>
       <hr>
       <i class="fa fa-telegram" style="font-size: 20px; color:dodgerblue"><a href="https://t.me/Sepehr404_bot" style="color: chartreuse; text-decoration: none;" target="_blank"> Telegram Profile Bot</a></i>
+      <hr>
+      <i class="fa fa-envelope" style="font-size: 20px; color:white"><a href="mailto:email@example.com" style="color: chartreuse; text-decoration: none;" target="_blank"> Liasisepehr@gmail.com</a></i>
     </div>
 </body>
 </div>
