--- a/projects.html
+++ b/projects.html
@@ -57,6 +57,14 @@
         <p>This is a simple multi-player game created using <b>Java</b> and <b>JavaFX</b>. Each player can change his block type by using some defined keys
            and there is a scoreboard to show the result. A preview can be seen below:</p>
     </div>
+    <div class="container-lg p-5 my-3 text-white" style="border-radius: 5px; background-color:rgb(45, 52, 46);">
+      <h4>📰Poster Contest of UND</h4>
+        <hr>
+        <p>Here is a photo of my designed poster titled "Cybersecurity in Autonomous Cars; Threats & Solutions" in the lobby of North Dakota University.
+          My presentation has been admitted among the top ones in this poster contest!
+        </p>
+        <img src="resources/Poster-CARS2023.jpg" alt="" style="width: 50%;">
+    </div>
 </body>
 </div>
 
