minor bug fixed

--- a/projects.html
+++ b/projects.html
@@ -34,7 +34,7 @@
           </div>
     </nav>
     <div class="container-lg p-5 my-3 text-white" style="border-radius: 5px; background-color:rgb(45, 52, 46);">
-      <h4>💰Automated trading in cryptocurrency market based on predictions using Deep Learning</h4>
+      <h4>💰Automated Trading in Cryptocurrency Market based on Predictions using Deep Learning</h4>
         <hr>
         <p>The main goal of this project is to investigate the existence of methods for predicting cryptocurrency prices and then simulating 
           an automatic trading strategy based on that prediction; So that it can be used to make a profit in the digital currency markets. 
