--- a/projects.html
+++ b/projects.html
@@ -52,6 +52,29 @@
         <p>A paper is going to be published soon about these works with the appreciated help of Dr. Alaeiyan.</p>
     </div>
     <div class="container-lg p-5 my-3 text-white" style="border-radius: 5px; background-color:rgb(26, 30, 27);">
+      <h4>🛍UniMarket</h4>
+        <hr>
+        <p>This project has been done in a group of three members using agile methods. This is a website in which students can register and after 
+          they are validated by admins, they can sell or buy goods like their foods or books. Moreover a feature is implemented to let organizations 
+          put their job offers and hire the best suit among all the students. Similarly, students can upload their resume for their desired job offers.
+          The following pictures are some screenshots from this website!
+        </p>
+        <div>
+          <img src="resources/Unimarket1.jpg" alt="" style="width: 90%;">
+          <hr>
+          <img src="resources/unimarket2.jpg" alt="" style="width: 90%;">
+        </div>
+    </div>
+    <div class="container-lg p-5 my-3 text-white" style="border-radius: 5px; background-color:rgb(45, 52, 46);">
+      <h4>👦68 Facial Points Detection</h4>
+        <hr>
+        <p>We carried out a project in which the trained model could detect faces in an input picture and recognize 68 facial points for every 
+          face in the image. Python libraries like numpy, pickle, tensorflow and keras were used to create a sequential CNN model and the training process
+          was run on the google colab!
+        </p>
+        <img src="resources/68-facial-landmarks.jpg" alt="" style="width: 30%;">
+    </div>
+    <div class="container-lg p-5 my-3 text-white" style="border-radius: 5px; background-color:rgb(26, 30, 27);">
       <h4>🎲Simple Game</h4>
         <hr>
         <p>This is a simple multi-player game created using <b>Java</b> and <b>JavaFX</b>. Each player can change his block type by using some defined keys
@@ -61,7 +84,7 @@
       <h4>📰Poster Contest of UND</h4>
         <hr>
         <p>Here is a photo of my designed poster titled "Cybersecurity in Autonomous Cars; Threats & Solutions" in the lobby of North Dakota University.
-          My presentation has been admitted among the top ones in this poster contest!
+          My presentation has been admitted among the top ones in this poster contest "Cybersecurity Awareness & Research Simposium"!
         </p>
         <img src="resources/Poster-CARS2023.jpg" alt="" style="width: 50%;">
     </div>
