Summer internship added

--- a/work.html
+++ b/work.html
@@ -33,9 +33,23 @@
             </ul>
           </div>
     </nav>
-    <div class="container-lg p-5 my-3 text-white" style="border-radius: 5px; background-color:brown;">
-        <h4>📌Sorry, this page is under construction!</h4>
+    <div class="container-lg p-5 my-3 text-white" style="border-radius: 5px; background-color:rgb(26, 30, 27);">
+      <h4>Latex Editor Service</h4>
         <hr>
+        <p>During my internship in summer 2023, I worked with a group and a mentor to set up a Latex Text Editor. In two months, we could finally 
+          deploy and bring up a website in IPM HPC cluster. We used the original code base of the Overleaf (Using Sharelatex code on github) and 
+          then customized it based on our needs. Adding a SSO connection and modifications in authentication process were among the most important 
+          coding experiences. 
+          Moreover, we carried out this task by benefitting from some tools like Docker and Kubernetes as they are great tools to use for distributed systems.
+          Tools used and concepts learnt during this internship:
+          + Kubernetes
+          + Docker
+          + Rancher GUI
+          + Prometheus and Grafana
+          + Distribured systems
+          + Forking and Modifying an Open-Source code 
+          + Nodejs and Golang
+        </p>
     </div>
 </body>
 </div>
