Iranian Khodro added

--- a/work.html
+++ b/work.html
@@ -51,6 +51,15 @@
           + Nodejs and Golang
         </p>
     </div>
+
+    <div class="container-lg p-5 my-3 text-white" style="border-radius: 5px; background-color:rgb(45, 52, 46);">
+      <h4>.Net Core 5</h4>
+        <hr>
+        <p>I worked in a project to develop a website for Iranian Khodro company. It was coded in C# (.Net Core 5) and Angular. Some features were 
+          asked to be implemented to the base code that required to have the knowledge of backend developing and using some tools like Entity Framework.
+          It was a great experience to improve my proficiency in backend development.
+        </p>
+    </div>
 </body>
 </div>
 
