minor bug fixed

--- a/work.html
+++ b/work.html
@@ -40,14 +40,14 @@
           deploy and bring up a website in IPM HPC cluster. We used the original code base of the Overleaf (Using Sharelatex code on github) and 
           then customized it based on our needs. Adding a SSO connection and modifications in authentication process were among the most important 
           coding experiences. 
-          Moreover, we carried out this task by benefitting from some tools like Docker and Kubernetes as they are great tools to use for distributed systems.
-          Tools used and concepts learnt during this internship:
-          + Kubernetes
-          + Docker
-          + Rancher GUI
-          + Prometheus and Grafana
-          + Distribured systems
-          + Forking and Modifying an Open-Source code 
+          Moreover, we carried out this task by benefitting from some tools like Docker and Kubernetes as they are great tools to use for distributed systems. <br>
+          Tools used and concepts learnt during this internship: <br>
+          + Kubernetes <br>
+          + Docker <br>
+          + Rancher GUI <br>
+          + Prometheus and Grafana <br>
+          + Distribured systems <br>
+          + Forking and Modifying an Open-Source code <br>
           + Nodejs and Golang
         </p>
     </div>
