--- a/index.html
+++ b/index.html
@@ -45,6 +45,23 @@
               <img src="resources/ICPC-Certificate2023.jpg" alt="" style="width: 32%;">
               <img src="resources/ICPC2022.jpg" alt="" style="width: 30%;">
             </div>
+
+            <br>
+            <h5>
+              9th Exhibition of the Elite Practical-Applied Undergraduate Projects (K. N. Toosi University of Technology)
+            </h5>
+            <div>
+              <img src="resources/Certificate.jpg" alt="" style="width: 32%;">
+            </div>
+
+            <br>
+            <h5>
+              3rd Annual Hybrid Cybersecurity Awareness & Research Symposium (University of North Dakota)
+            </h5>
+            <div>
+              <img src="resources/UND_Certificate.png" alt="" style="width: 32%;">
+            </div>
+
             <br>
             On this webpage you can find a brief explanation about me and my interests. There is also some information about my work and university experiences, which you can find them on
              <a href="projects.html" style="color:rgb(127, 228, 195)">Projects</a> and <a href="work.html" style="color:rgb(127, 228, 195)">Work Experience</a>
