certificate pictures fixed

--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
         <p>My name is <b>Sepehr Ghaseminejad Liasi</b> and I am a senior <b>Computer Engineering</b> student at <a href="https://en.kntu.ac.ir/" style="color:rgb(127, 228, 195)">K.N.Toosi University of Technology</a>.
             It may worth mentioning that I have participated in Mathematics and Informatics Olympiads in which I got to be admitted in first and second phases and be among the top 100 students.
             <br>
-            I have competed in ICPC competition twice, once in 2020 and the other one in 2022. I could qualify for the regional contest with two of my teammates. Finally we placed 17th and 13th for the two reginal contests respectively.
-            <div>
+            I have competed in ICPC competition twice, once in 2020 and the other one in 2022. I could qualify for the regional contest with two of my teammates. Finally we placed 17th and 13th for the two regional contests respectively.
+            <div style="display: block;">
               <img src="resources/ICPC-Certificate2023.jpg" alt="" style="width: 32%;">
               <img src="resources/ICPC2022.jpg" alt="" style="width: 30%;">
             </div>
@@ -51,7 +51,8 @@
               9th Exhibition of the Elite Practical-Applied Undergraduate Projects (K. N. Toosi University of Technology)
             </h5>
             <div>
-              <img src="resources/Certificate.jpg" alt="" style="width: 32%;">
+              <img src="resources/certificate_en.jpg" alt="" style="width: 32%;">
+              <img src="resources/exhibition.jpg" alt="" style="width: 40%;">
             </div>
 
             <br>
