email link bug fixed

--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,7 @@
       <hr>
       <i class="fa fa-telegram" style="font-size: 20px; color:dodgerblue"><a href="https://t.me/Sepehr404_bot" style="color: navajowhite; text-decoration: none;" target="_blank"> Telegram Profile Bot</a></i>
       <hr>
-      <i class="fa fa-envelope" style="font-size: 20px; color:white"><a href="mailto:email@example.com" style="color: navajowhite; text-decoration: none;" target="_blank"> Liasisepehr@gmail.com</a></i>
+      <i class="fa fa-envelope" style="font-size: 20px; color:white"><a href="mailto:liasisepehr@gmail.com" style="color: navajowhite; text-decoration: none;" target="_blank"> Liasisepehr@gmail.com</a></i>
     </div>
 </body>
 </div>
